--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,81 +16,56 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Create hidden PHP generator
+      - name: Write PHP generator
         run: |
-          cat > generator.php << 'EOF'
-<?php
-header("Content-Type: audio/x-mpegurl; charset=UTF-8");
-header("Content-Disposition: inline; filename=playlist.m3u");
+          echo '<?php' > generator.php
+          echo 'header("Content-Type: audio/x-mpegurl; charset=UTF-8");' >> generator.php
+          echo 'header("Content-Disposition: inline; filename=playlist.m3u");' >> generator.php
 
-// API endpoints
-$api = "https://livetv-hub.cricindia95.workers.dev/channel.json";
-$cookie_api = "https://cookie.cricindia95.workers.dev";
+          echo '$api = "https://livetv-hub.cricindia95.workers.dev/channel.json";' >> generator.php
+          echo '$cookie_api = "https://cookie.cricindia95.workers.dev";' >> generator.php
 
-// Fetch channel JSON
-$data = @file_get_contents($api);
-if (!$data) {
-    echo "#EXTM3U\n# Error: Failed to fetch channel API\n";
-    exit;
-}
+          echo '$data = @file_get_contents($api);' >> generator.php
+          echo 'if(!$data){ echo "#EXTM3U\n# Error fetching API\n"; exit; }' >> generator.php
 
-$json = json_decode($data, true);
-if (!is_array($json)) {
-    echo "#EXTM3U\n# Error: Invalid channel JSON\n";
-    exit;
-}
+          echo '$json = json_decode($data, true);' >> generator.php
+          echo 'if(!is_array($json)){ echo "#EXTM3U\n# Error invalid JSON\n"; exit; }' >> generator.php
 
-// Fetch cookie
-$cookie = trim(@file_get_contents($cookie_api));
-if (!$cookie) {
-    $cookie = "";
-}
+          echo '$cookie = trim(@file_get_contents($cookie_api));' >> generator.php
+          echo 'if(!$cookie){ $cookie=""; }' >> generator.php
 
-// Playlist header
-echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";
-echo "#DATE: " . date("l d F, Y H:i:s") . "\n\n";
+          echo 'echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";' >> generator.php
+          echo 'echo "#DATE: ".date("l d F, Y H:i:s")."\n\n";' >> generator.php
 
-// Loop channels
-foreach ($json as $c) {
+          echo 'foreach($json as $c){' >> generator.php
+          echo '$tvg = $c["tvg-id"] ?? "";' >> generator.php
+          echo '$grp = $c["group-title"] ?? "Others";' >> generator.php
+          echo '$logo = $c["tvg-logo"] ?? "";' >> generator.php
+          echo '$name = $c["channel-name"] ?? "Unknown";' >> generator.php
+          echo '$key = $c["license_key"] ?? "";' >> generator.php
+          echo '$mpd = $c["mpd_url"] ?? "";' >> generator.php
 
-    $tvg_id      = $c["tvg-id"] ?? "";
-    $group       = $c["group-title"] ?? "Others";
-    $logo        = $c["tvg-logo"] ?? "";
-    $name        = $c["channel-name"] ?? "Unknown";
-    $licenseKey  = $c["license_key"] ?? "";
-    $mpd         = $c["mpd_url"] ?? "";
+          echo 'if(!empty($key)){' >> generator.php
+          echo 'echo "#KODIPROP:inputstream.adaptive.license_type=clearkey\n";' >> generator.php
+          echo 'echo "#KODIPROP:inputstream.adaptive.license_key={$key}\n";' >> generator.php
+          echo '}' >> generator.php
 
-    // DRM block
-    if (!empty($licenseKey)) {
-        echo "#KODIPROP:inputstream.adaptive.license_type=clearkey\n";
-        echo "#KODIPROP:inputstream.adaptive.license_key={$licenseKey}\n";
-    }
+          echo 'echo "#EXTHTTP:{\"cookie\":\"$cookie\"}\n";' >> generator.php
 
-    // EXTHTTP cookie header
-    echo "#EXTHTTP:{\"cookie\":\"$cookie\"}\n";
+          echo '$ec = urlencode("|cookie=$cookie");' >> generator.php
+          echo '$final = $mpd."?__hdnea__=$cookie&xxx=".$ec;' >> generator.php
 
-    // Build final MPD URL format
-    $encoded_cookie = urlencode("|cookie=$cookie");
-
-    $final_url =
-        $mpd .
-        "?__hdnea__=$cookie" .
-        "&xxx=" . $encoded_cookie;
-
-    // EXTINF channel details
-    echo "#EXTINF:-1 tvg-id=\"$tvg_id\" tvg-logo=\"$logo\" group-title=\"$group\",$name\n";
-    echo $final_url . "\n\n";
-}
-?>
-EOF
+          echo 'echo "#EXTINF:-1 tvg-id=\"$tvg\" tvg-logo=\"$logo\" group-title=\"$grp\",$name\n";' >> generator.php
+          echo 'echo "$final\n\n";' >> generator.php
+          echo '}' >> generator.php
 
       - name: Run generator
         run: php generator.php > playlist.m3u
 
-      - name: Commit playlist
+      - name: Commit playlist.m3u
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
           git add playlist.m3u
-          git commit -m "Auto-update playlist" || echo "No changes"
+          git commit -m "Auto update" || echo "No changes"
           git push
