--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,53 +16,54 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Write PHP generator
+      - name: Create generator
         run: |
           echo '<?php' > generator.php
-          echo 'header("Content-Type: audio/x-mpegurl; charset=UTF-8");' >> generator.php
-          echo 'header("Content-Disposition: inline; filename=playlist.m3u");' >> generator.php
+          echo '$api="https://livetv-hub.cricindia95.workers.dev/channel.json";' >> generator.php
+          echo '$cookie_api="https://cookie.cricindia95.workers.dev";' >> generator.php
 
-          echo '$api = "https://livetv-hub.cricindia95.workers.dev/channel.json";' >> generator.php
-          echo '$cookie_api = "https://cookie.cricindia95.workers.dev";' >> generator.php
+          echo '$json=@json_decode(@file_get_contents($api),true);' >> generator.php
+          echo 'if(!is_array($json)){echo "#EXTM3U\n# Error";exit;}' >> generator.php
 
-          echo '$data = @file_get_contents($api);' >> generator.php
-          echo 'if(!$data){ echo "#EXTM3U\n# Error fetching API\n"; exit; }' >> generator.php
-
-          echo '$json = json_decode($data, true);' >> generator.php
-          echo 'if(!is_array($json)){ echo "#EXTM3U\n# Error invalid JSON\n"; exit; }' >> generator.php
-
-          echo '$cookie = trim(@file_get_contents($cookie_api));' >> generator.php
-          echo 'if(!$cookie){ $cookie=""; }' >> generator.php
+          echo '$cookie=trim(@file_get_contents($cookie_api));' >> generator.php
+          echo 'if(!$cookie)$cookie="";' >> generator.php
 
           echo 'echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";' >> generator.php
           echo 'echo "#DATE: ".date("l d F, Y H:i:s")."\n\n";' >> generator.php
 
           echo 'foreach($json as $c){' >> generator.php
-          echo '$tvg = $c["tvg-id"] ?? "";' >> generator.php
-          echo '$grp = $c["group-title"] ?? "Others";' >> generator.php
-          echo '$logo = $c["tvg-logo"] ?? "";' >> generator.php
-          echo '$name = $c["channel-name"] ?? "Unknown";' >> generator.php
-          echo '$key = $c["license_key"] ?? "";' >> generator.php
-          echo '$mpd = $c["mpd_url"] ?? "";' >> generator.php
+          echo '$id=$c["tvg-id"]??"";' >> generator.php
+          echo '$grp=$c["group-title"]??"Others";' >> generator.php
+          echo '$logo=$c["tvg-logo"]??"";' >> generator.php
+          echo '$name=$c["channel-name"]??"Unknown";' >> generator.php
+          echo '$key=$c["license_key"]??"";' >> generator.php
+          echo '$mpd=$c["mpd_url"]??"";' >> generator.php
 
+          # EXTINF must come FIRST
+          echo 'echo "#EXTINF:-1 tvg-id=\"{$id}\" group-title=\"{$grp}\" tvg-logo=\"{$logo}\",{$name}\n";' >> generator.php
+
+          # DRM tags
           echo 'if(!empty($key)){' >> generator.php
           echo 'echo "#KODIPROP:inputstream.adaptive.license_type=clearkey\n";' >> generator.php
           echo 'echo "#KODIPROP:inputstream.adaptive.license_key={$key}\n";' >> generator.php
           echo '}' >> generator.php
 
+          # User agent
+          echo 'echo "#EXTVLCOPT:http-user-agent=plaYtv/7.1.3 (Linux;Android 13) ygx/69.1 ExoPlayerLib/824.0\n";' >> generator.php
+
+          # EXTHTTP cookie
           echo 'echo "#EXTHTTP:{\"cookie\":\"$cookie\"}\n";' >> generator.php
 
-          echo '$ec = urlencode("|cookie=$cookie");' >> generator.php
-          echo '$final = $mpd."?__hdnea__=$cookie&xxx=".$ec;' >> generator.php
+          # Build final URL
+          echo '$final=$mpd."?__hdnea__=".$cookie."&xxx=%7Ccookie=".$cookie;' >> generator.php
 
-          echo 'echo "#EXTINF:-1 tvg-id=\"$tvg\" tvg-logo=\"$logo\" group-title=\"$grp\",$name\n";' >> generator.php
-          echo 'echo "$final\n\n";' >> generator.php
+          echo 'echo $final."\n\n";' >> generator.php
           echo '}' >> generator.php
 
       - name: Run generator
         run: php generator.php > playlist.m3u
 
-      - name: Commit playlist.m3u
+      - name: Commit playlist
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "github-actions@github.com"
