--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,10 @@ jobs:
           echo '$cookie=trim(@file_get_contents($cookie_api));' >> generator.php
           echo 'if(!$cookie)$cookie="";' >> generator.php
 
-          echo 'echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";' >> generator.php
+          # CLEAN cookie only for URL, NOT for header
+          echo '$clean=str_replace("__hdnea__=","",$cookie);' >> generator.php
+
+          echo 'echo "#EXTM3U"\n;' >> generator.php
           echo 'echo "#DATE: ".date("l d F, Y H:i:s")."\n\n";' >> generator.php
 
           echo 'foreach($json as $c){' >> generator.php
@@ -40,32 +43,27 @@ jobs:
           echo '$key=$c["license_key"]??"";' >> generator.php
           echo '$url=$c["mpd_url"]??"";' >> generator.php
 
-          # EXTINF FIRST
-          echo 'echo "#EXTINF:-1 tvg-id=\"{$id}\" group-title=\"{$grp}\" tvg-logo=\"{$logo}\",{$name}\n";' >> generator.php
+          echo 'echo "#EXTINF:-1 tvg-id=\"$id\" group-title=\"$grp\" tvg-logo=\"$logo\",$name\n";' >> generator.php
+          echo 'echo "#EXTVLCOPT:http-user-agent=plaYtv/7.1.3 (Linux;Android 13)\n";' >> generator.php
 
-          # USER AGENT ALWAYS
-          echo 'echo "#EXTVLCOPT:http-user-agent=plaYtv/7.1.3 (Linux;Android 13) ygx/69.1 ExoPlayerLib/824.0\n";' >> generator.php
-
-          # CASE 1: JIO MPD (needs cookie + DRM)
+          # Jio URLs need cookie + DRM
           echo 'if(strpos($url,"jiotvpllive")!==false || strpos($url,"bpk-tv")!==false){' >> generator.php
 
-          # DRM
           echo 'if(!empty($key)){' >> generator.php
           echo 'echo "#KODIPROP:inputstream.adaptive.license_type=clearkey\n";' >> generator.php
-          echo 'echo "#KODIPROP:inputstream.adaptive.license_key={$key}\n";' >> generator.php
+          echo 'echo "#KODIPROP:inputstream.adaptive.license_key=$key\n";' >> generator.php
           echo '}' >> generator.php
 
-          # EXTHTTP Cookie
+          # EXTHTTP uses raw cookie
           echo 'echo "#EXTHTTP:{\"cookie\":\"$cookie\"}\n";' >> generator.php
 
-          # BUILD CLEAN URL (NO duplicate __hdnea__)
-          echo '$final=$url."?__hdnea__=".$cookie."&xxx=%7Ccookie=".$cookie;' >> generator.php
+          # Final URL (PERFECT FORMAT)
+          echo '$final = $url . "?__hdnea__=" . $clean . "&xxx=%7Ccookie=" . $cookie;' >> generator.php
 
           echo 'echo $final."\n\n";' >> generator.php
           echo 'continue;' >> generator.php
           echo '}' >> generator.php
 
-          # CASE 2: NON-JIO URL (clean output, NO cookie)
           echo 'echo $url."\n\n";' >> generator.php
           echo '}' >> generator.php
 
