--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,9 +36,10 @@ jobs:
           echo '$clean = str_replace("__hdnea__=","",$cookie_raw);' >> generator.php
 
           echo 'echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";' >> generator.php
-          echo 'echo "#DATE: ".date("l d F, Y H:i:s")."\n\n";' >> generator.php
+          echo 'echo "#DATE: ".date("l d F, Y H:i:s") . "\n\n";' >> generator.php
 
           echo 'foreach($json as $c){' >> generator.php
+
           echo '$id=$c["tvg-id"]??"";' >> generator.php
           echo '$grp=$c["group-title"]??"Others";' >> generator.php
           echo '$logo=$c["tvg-logo"]??"";' >> generator.php
@@ -50,13 +51,13 @@ jobs:
           echo 'echo "#EXTVLCOPT:http-user-agent=plaYtv/7.1.3 (Linux;Android 13) ygx/69.1 ExoPlayerLib/824.0\n";' >> generator.php
 
 
-          #######################
-          #  SONYLIV HANDLING   #
-          #######################
-          echo '$isSony = (strpos(strtolower($name),"sony")!==false || strpos($url,"sonyliv")!==false);' >> generator.php
+          ############################
+          #  STRICT SONYLIV HANDLER  #
+          ############################
+          echo '$isSony = (strpos(strtolower($name),"sony")!==false);' >> generator.php
           echo 'if($isSony){' >> generator.php
           echo 'foreach($sliv as $s){' >> generator.php
-          echo 'if(strtolower(trim($s["channel"])) == strtolower(trim($name))){' >> generator.php
+          echo 'if(strtolower(trim($s["channel"])) == strtolower(trim($name))) {' >> generator.php
           echo 'echo $s["link"] . "\n\n";' >> generator.php
           echo 'continue 2;' >> generator.php
           echo '}' >> generator.php
@@ -65,7 +66,7 @@ jobs:
 
 
           ###################
-          #   JIO CHANNELS  #
+          #  JIO CHANNELS   #
           ###################
           echo 'if(strpos($url,"jiotvpllive")!==false || strpos($url,"bpk-tv")!==false){' >> generator.php
 
@@ -77,15 +78,14 @@ jobs:
           echo 'echo "#EXTHTTP:{\"cookie\":\"$cookie_raw\"}\n";' >> generator.php
 
           echo '$final=$url."?__hdnea__=".$clean."&xxx=%7Ccookie=__hdnea__=".$clean;' >> generator.php
-          echo 'echo $final."\n\n";' >> generator.php
-          echo 'continue;' >> generator.php
+          echo 'echo $final."\n\n"; continue;' >> generator.php
           echo '}' >> generator.php
 
 
-          ########################
-          #   OTHER CHANNELS     #
-          ########################
-          echo 'echo $url."\n\n";' >> generator.php
+          ###################
+          # OTHER CHANNELS  #
+          ###################
+          echo 'echo $url . "\n\n";' >> generator.php
 
           echo '}' >> generator.php
 
