--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,9 @@ jobs:
 
           echo '$clean = str_replace("__hdnea__=","",$cookie_raw);' >> generator.php
 
-          echo 'echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";' >> generator.php
+          echo '$skipCats=["Business News","Devotional","Educational"];' >> generator.php
+
+          echo 'echo "#EXTM3U x-tvg-url=\\"https://avkb.short.gy/jioepg.xml.gz\\"\n";' >> generator.php
           echo 'echo "#DATE: ".date("l d F, Y H:i:s") . "\n\n";' >> generator.php
 
           echo 'foreach($json as $c){' >> generator.php
@@ -47,7 +49,10 @@ jobs:
           echo '$key=$c["license_key"]??"";' >> generator.php
           echo '$url=$c["mpd_url"]??"";' >> generator.php
 
-          echo 'echo "#EXTINF:-1 tvg-id=\"$id\" group-title=\"$grp\" tvg-logo=\"$logo\",$name\n";' >> generator.php
+          # SKIP CATEGORIES
+          echo 'if(in_array($grp,$skipCats)) continue;' >> generator.php
+
+          echo 'echo "#EXTINF:-1 tvg-id=\\"" . $id . "\\" group-title=\\"" . $grp . "\\" tvg-logo=\\"" . $logo . "\\"," . $name . "\n";' >> generator.php
           echo 'echo "#EXTVLCOPT:http-user-agent=plaYtv/7.1.3 (Linux;Android 13) ygx/69.1 ExoPlayerLib/824.0\n";' >> generator.php
 
 
