--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,16 +33,12 @@ jobs:
           echo '$cookie_raw=trim(@file_get_contents($cookie_api));' >> generator.php
           echo 'if(!$cookie_raw)$cookie_raw="";' >> generator.php
 
-          echo '$clean=str_replace("__hdnea__=","",$cookie_raw);' >> generator.php
+          echo '$clean = str_replace("__hdnea__=","",$cookie_raw);' >> generator.php
 
-          echo '$skipCats=["Business News","Devotional","Educational"];' >> generator.php
-
-          # FIXED QUOTE ESCAPING
-          echo 'echo "#EXTM3U x-tvg-url=\\"https://avkb.short.gy/jioepg.xml.gz\\"\n";' >> generator.php
+          echo 'echo "#EXTM3U x-tvg-url=\"https://avkb.short.gy/jioepg.xml.gz\"\n";' >> generator.php
           echo 'echo "#DATE: ".date("l d F, Y H:i:s")."\n\n";' >> generator.php
 
           echo 'foreach($json as $c){' >> generator.php
-
           echo '$id=$c["tvg-id"]??"";' >> generator.php
           echo '$grp=$c["group-title"]??"Others";' >> generator.php
           echo '$logo=$c["tvg-logo"]??"";' >> generator.php
@@ -50,44 +46,47 @@ jobs:
           echo '$key=$c["license_key"]??"";' >> generator.php
           echo '$url=$c["mpd_url"]??"";' >> generator.php
 
-          # CATEGORY SKIP
-          echo 'if(in_array($grp,$skipCats)) continue;' >> generator.php
-
-          echo 'echo "#EXTINF:-1 tvg-id=\\"" . $id . "\\" group-title=\\"" . $grp . "\\" tvg-logo=\\"" . $logo . "\\"," . $name . "\n";' >> generator.php
+          echo 'echo "#EXTINF:-1 tvg-id=\"$id\" group-title=\"$grp\" tvg-logo=\"$logo\",$name\n";' >> generator.php
           echo 'echo "#EXTVLCOPT:http-user-agent=plaYtv/7.1.3 (Linux;Android 13) ygx/69.1 ExoPlayerLib/824.0\n";' >> generator.php
 
-          #########################
-          #  SONYLIV HANDLING     #
-          #########################
-          echo '$isSony=(strpos(strtolower($name),"sony")!==false || strpos($url,"sonyliv")!==false);' >> generator.php
+
+          #######################
+          #  SONYLIV HANDLING   #
+          #######################
+          echo '$isSony = (strpos(strtolower($name),"sony")!==false || strpos($url,"sonyliv")!==false);' >> generator.php
           echo 'if($isSony){' >> generator.php
           echo 'foreach($sliv as $s){' >> generator.php
-          echo 'if(strtolower(trim($s["channel"]))==strtolower(trim($name))){' >> generator.php
+          echo 'if(strtolower(trim($s["channel"])) == strtolower(trim($name))){' >> generator.php
           echo 'echo $s["link"] . "\n\n";' >> generator.php
           echo 'continue 2;' >> generator.php
           echo '}' >> generator.php
-          echo '}}' >> generator.php
+          echo '}' >> generator.php
+          echo '}' >> generator.php
 
-          #########################
-          #  JIO CHANNELS         #
-          #########################
+
+          ###################
+          #   JIO CHANNELS  #
+          ###################
           echo 'if(strpos($url,"jiotvpllive")!==false || strpos($url,"bpk-tv")!==false){' >> generator.php
 
           echo 'if(!empty($key)){' >> generator.php
           echo 'echo "#KODIPROP:inputstream.adaptive.license_type=clearkey\n";' >> generator.php
-          echo 'echo "#KODIPROP:inputstream.adaptive.license_key=" . $key . "\n";' >> generator.php
+          echo 'echo "#KODIPROP:inputstream.adaptive.license_key=$key\n";' >> generator.php
           echo '}' >> generator.php
 
-          echo 'echo "#EXTHTTP:{\\"cookie\\":\\"$cookie_raw\\"}\n";' >> generator.php
+          echo 'echo "#EXTHTTP:{\"cookie\":\"$cookie_raw\"}\n";' >> generator.php
 
           echo '$final=$url."?__hdnea__=".$clean."&xxx=%7Ccookie=__hdnea__=".$clean;' >> generator.php
-          echo 'echo $final."\n\n"; continue;' >> generator.php
+          echo 'echo $final."\n\n";' >> generator.php
+          echo 'continue;' >> generator.php
           echo '}' >> generator.php
 
-          #########################
-          # OTHER CHANNELS (CLEAN)
-          #########################
+
+          ########################
+          #   OTHER CHANNELS     #
+          ########################
           echo 'echo $url."\n\n";' >> generator.php
+
           echo '}' >> generator.php
 
       - name: Run generator
